--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
 </head>
 <body>
     <header class="quotesContainer">
-
+      
     </header>
     <main>
-  
+  <p>
+    “A true friend is the most precious of all possessions and the one we take the least thought about acquiring.”
+  </p>
+  <h1>
+    16:11
+  </h1>
     </main>
     <footer>
 
     </footer>
-    <script defer src="/App/Js/main.js"></script>
+    <script type="module" defer src="/App/Js/main.js"></script>
 </body>
 </html>
