the region first div element styles and make it responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     
     </header>
     <main>
- 
+     <div class="myRegion">
+        <div class="myRegion__timeZone">
+         <div class="myRegion__dayPeriod">
+            <img src="/App/assets/desktop/icon-sun.svg">
+            <h3>GOOD MORNING</h3>
+         </div>
+         <div class="myRegion__timeContainer">
+             <h1 class="myRegion__time">
+               11:11
+             </h1>
+             <span >+01</span>
+         </div>
+         <!--  -->
+          <h2 class="myRegion__country">
+            IN LONDON, UK
+          </h2>
+          <!-- the more and less icon -->
+          <div class="myRegion__more">
+            <p class="more">More</p>
+            <img src="/App/assets/desktop/icon-arrow-up.svg" alt="" class="more-icon">
+          </div>
+        </div>
+        <!-- Second container -->
+        <div class="myRegion__date">
+
+        </div>
+     </div>
     </main>
     <footer>
 
