--- a/index.html
+++ b/index.html
@@ -12,35 +12,29 @@
     
     </header>
     <main>
-     <div class="myRegion">
-        <div class="myRegion__timeZone">
-         <div class="myRegion__dayPeriod">
-            <img src="/App/assets/desktop/icon-sun.svg">
-            <h3>GOOD MORNING</h3>
-         </div>
-         <div class="myRegion__timeContainer">
-             <h1 class="myRegion__time">
-               11:11
-             </h1>
-             <span >+01</span>
-         </div>
-         <!--  -->
-          <h2 class="myRegion__country">
-            IN LONDON, UK
-          </h2>
-          <!-- the more and less icon -->
-          <div class="myRegion__more">
-            <p class="more">More</p>
-            <img src="/App/assets/desktop/icon-arrow-up.svg" alt="" class="more-icon">
-          </div>
-        </div>
-        <!-- Second container -->
+    
+</main>
+<footer>
+         <!-- Second container -->
         <div class="myRegion__date">
-
-        </div>
-     </div>
-    </main>
-    <footer>
+             <!-- grid container  -->
+            <div class="zone row">
+                <h4>CURRENT TIMEZONE</h4>
+                <h2 class="myRegion__name">Africa/Casablanca</h2>
+            </div>
+            <div class="yearDay row">
+                <h4>DAY OF THE YEAR</h4>
+                <h2 class="myRegion__dayeOfYear">286</h2>
+            </div>
+            <div class="weekDay row">
+                <h4>DAY OF THE WEEK</h4>
+                <h2 class="myRegion__dayOfWeek">4</h2>
+            </div>
+            <div class="weekNumber row">
+                <h4>WEEK NUMBER</h4>
+                <h2 class="myRegion__weekNumber">41</h2>
+            </div>
+        </div> 
 
     </footer>
     <script type="module" defer src="/App/Js/main.js"></script>
