adding the footer content with javascript

--- a/index.html
+++ b/index.html
@@ -9,33 +9,13 @@
 </head>
 <body>
     <header class="quotesContainer">
-    
+           <!-- content to be added in the Js file -->
     </header>
     <main>
-    
+           <!-- content to be added in the Js file -->
 </main>
 <footer>
-         <!-- Second container -->
-        <div class="myRegion__date">
-             <!-- grid container  -->
-            <div class="zone row">
-                <h4>CURRENT TIMEZONE</h4>
-                <h2 class="myRegion__name">Africa/Casablanca</h2>
-            </div>
-            <div class="yearDay row">
-                <h4>DAY OF THE YEAR</h4>
-                <h2 class="myRegion__dayeOfYear">286</h2>
-            </div>
-            <div class="weekDay row">
-                <h4>DAY OF THE WEEK</h4>
-                <h2 class="myRegion__dayOfWeek">4</h2>
-            </div>
-            <div class="weekNumber row">
-                <h4>WEEK NUMBER</h4>
-                <h2 class="myRegion__weekNumber">41</h2>
-            </div>
-        </div> 
-
+       <!-- content to be added in the Js file -->
     </footer>
     <script type="module" defer src="/App/Js/main.js"></script>
 </body>
